2007-12-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBehaviourEllipse.xs: Use the mPUSH?() macros to
	avoid the sv_2mortal(newSV?v()) tediousness.

	* t/ClutterBehaviourEllipse.t: Fix the alignment.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs:
	* xs/ClutterAlpha.xs:
	* xs/ClutterBehaviour.xs:
	* xs/ClutterUnits.xs: Even more documentation.

	* examples/behaviour.pl: Use a custom alpha function, and exercise
	the Clutter::Timeline->get_progress() API at the same time.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Port some of the C API documentation
	and description to the Perl bindings.

	* examples/script.pl: Remove a useless signal handler definition.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterScript.xs: Fix documentation

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST: Update

	* xs/ClutterScript.xs: Actually add ClutterScript bindings
	to the repository.

	* examples/script.pl: Example code for both ClutterScript
	and ClutterScore.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs_files: Add ClutterScript.xs

	* xs/ClutterScript.xs: Add bindings for ClutterScript.

	* Clutter.pm: Implement Clutter::Script::connect_signals().

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs_files: Add ClutterScore.xs

	* xs/ClutterScore.xs: Add bindings for ClutterScore.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* *: Sync up with upstream C API changes. As much as I hate
	doing huge commits, this is the only way to keep the bindings
	in a sane state.

	Missing bits:
	  - ClutterTimeoutPool: still need to think of a nice way to
	    wrap it up in Perl
	  - ClutterScore
	  - ClutterScript
	  - ClutterShader: this will have to wait until the dust
	    settles upstream

2007-08-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump to 0.500.

	* xs/Clutter.xs: Support the new thread-safety API, and put it